Changing class name, modal > modal-contact, conflict jquerymodal.js lib

--- a/assets/css/modules/_contact.sass
+++ b/assets/css/modules/_contact.sass
@@ -27,7 +27,7 @@
     @media (max-width: 767px)
       justify-content: center
 
-    .modal
+    .modal-contact
       padding: 45px 45px
       text-align: center
       background-color: $black
