--- a/assets/css/modules/_modal.sass
+++ b/assets/css/modules/_modal.sass
@@ -1,9 +1,24 @@
 .modal-customization.modal
   background: $black
   text-align: justify
+
 .modal-content
   text-align: center
+  
+  i
+    font-size: 4rem
+    margin: 20px 20px 5px 20px
+    color: $white
+    transition: color 0.5s;
+  
+    &:active
+      color: $white
+    
+    &:visited
+      color: $white
 
-.modal-content>i
-  font-size: 4rem
-  margin: 20px 20px 5px 20px
+    &:link
+      color: $white
+    
+    &:hover
+      color: $highlight
