change images in about--option links page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -990,13 +990,13 @@ body {
   background-repeat: no-repeat;
 }
 .about--options > a:nth-child(1) {
-  background-image: url("../img/about-winners.jpg");
+  background-image: url("../img/freecodecamp.jpg");
 }
 .about--options > a:nth-child(2) {
-  background-image: url("../img/about-philosophy.jpg");
+  background-image: url("../img/codebuddies.jpg");
 }
 .about--options > a:nth-child(3) {
-  background-image: url("../img/about-history.jpg");
+  background-image: url("../img/cdn.jpg");
 }
 .about--options > a:hover h3 {
   bottom: -50px;
