--- a/assets/css/modules/_about.sass
+++ b/assets/css/modules/_about.sass
@@ -107,13 +107,13 @@
         repeat: no-repeat
 
       &:nth-child(1)
-        background-image: url("../img/about-winners.jpg")
+        background-image: url("../img/freecodecamp.jpg")
 
       &:nth-child(2)
-        background-image: url("../img/about-philosophy.jpg")
+        background-image: url("../img/codebuddies.jpg")
 
       &:nth-child(3)
-        background-image: url("../img/about-history.jpg")
+        background-image: url("../img/cdn.jpg")
 
       &:hover
         h3
