--- a/assets/css/modules/_modal.sass
+++ b/assets/css/modules/_modal.sass
@@ -4,21 +4,24 @@
 
 .modal-content
   text-align: center
-  
+
+  a
+    text-decoration: none
+
   i
     font-size: 4rem
     margin: 20px 20px 5px 20px
     color: $white
-    transition: color 0.5s;
-  
+    transition: color 0.5s
+
     &:active
       color: $white
-    
+
     &:visited
       color: $white
 
     &:link
       color: $white
-    
+
     &:hover
       color: $highlight
